<resources>
    <string name="app_name">Movies App</string>
    <string name="feature_movie_tv_empty">No movies found. Try again later.</string>
    <string name="feature_movie_tv_trends">Trends</string>
    <string name="feature_movie_btn_retry">Retry</string>

    <!-- Short detail-->
    <string name="feature_movie_detail_btn_play">Play</string>
    <string name="feature_movie_detail_tv_download">Download</string>
    <string name="feature_movie_detail_tv_advance">Advance</string>
    <string name="feature_movie_detail_tv_info">Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="users_score">Users Score</string>
</resources>