<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:title="Adarsh"
        android:background="@color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        />
    
    <ImageView
        android:id="@+id/ivBackGround"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha=".2"
        android:scaleType="centerCrop"
        tools:src="@drawable/ic_launcher_background"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnMoviePlay"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivMoviePoster"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_margin="@dimen/padding_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:background="@color/white" />

    <TextView
        android:id="@+id/tvMovieName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_regular"
        android:layout_marginEnd="@dimen/padding_small"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivMoviePoster"
        app:layout_constraintTop_toTopOf="@id/ivMoviePoster"
        tools:text="The Godfather" />

    <TextView
        android:id="@+id/tvMovieReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="#555555"
        app:layout_constraintStart_toStartOf="@id/tvMovieName"
        app:layout_constraintTop_toBottomOf="@id/tvMovieName"
        tools:text="2014" />

    <com.mikhaellopez.circularprogressbar.CircularProgressBar
        android:id="@+id/circularProgressBar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:cpb_background_progressbar_color="#b6bbd8"
        app:cpb_background_progressbar_width="5dp"
        app:cpb_progress_direction="to_right"
        app:cpb_progressbar_color="#3f51b5"
        app:cpb_progressbar_width="10dp"
        app:cpb_round_border="false"
        app:layout_constraintTop_toBottomOf="@id/tvMovieReleaseDate"
        app:layout_constraintStart_toStartOf="@id/guideline"
        />

    <TextView
        android:id="@+id/tvProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="65"
        app:layout_constraintTop_toTopOf="@id/circularProgressBar"
        app:layout_constraintBottom_toBottomOf="@id/circularProgressBar"
        app:layout_constraintStart_toStartOf="@id/circularProgressBar"
        app:layout_constraintEnd_toEndOf="@id/circularProgressBar"
        />

    <TextView
        android:id="@+id/usersScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/users_score"
        android:layout_marginStart="12dp"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        app:layout_constraintTop_toTopOf="@id/circularProgressBar"
        app:layout_constraintStart_toEndOf="@id/circularProgressBar"
        app:layout_constraintBottom_toBottomOf="@id/circularProgressBar"
        />


<!--    <androidx.appcompat.widget.AppCompatImageView-->
<!--        android:id="@+id/ivMovieDetailClose"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="@dimen/padding_small"-->
<!--        android:background="@drawable/bg_circle"-->
<!--        android:padding="@dimen/padding_small"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@id/ivMoviePoster"-->
<!--        app:srcCompat="@drawable/ic_close" />-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMoviePlay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_medium"
        android:gravity="center"
        android:text="@string/feature_movie_detail_btn_play"
        app:icon="@drawable/ic_play_button"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/padding_regular"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="@id/ivMoviePoster"
        app:layout_constraintTop_toBottomOf="@id/ivMoviePoster" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tvMovieDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/padding_small"
        android:text="@string/feature_movie_detail_tv_download"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="#999999"
        app:drawableTopCompat="@drawable/ic_download"
        app:layout_constraintBottom_toBottomOf="@+id/btnMoviePlay"
        app:layout_constraintEnd_toStartOf="@id/tvMovieAdvance"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/btnMoviePlay" />

    <TextView
        android:id="@+id/tvMovieAdvance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/padding_small"
        android:text="@string/feature_movie_detail_tv_advance"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="#999999"
        app:drawableTopCompat="@drawable/ic_advance"
        app:layout_constraintBottom_toBottomOf="@+id/btnMoviePlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvMovieDownload"
        app:layout_constraintTop_toTopOf="@id/btnMoviePlay" />

    <View
        android:id="@+id/lineDivider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/padding_regular"
        android:background="#999999"
        app:layout_constraintTop_toBottomOf="@id/btnMoviePlay" />

    <TextView
        android:id="@+id/tvMovieOverview"
        android:padding="@dimen/padding_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feature_movie_detail_tv_info"
        tools:text="Lorem ipsum lorem ipsum lorem ipsum loremLorem ipsum lorem ipsum lorem ipsum loremLorem ipsum lorem ipsum lorem ipsum lorem"
        android:drawablePadding="@dimen/padding_small"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintTop_toBottomOf="@id/lineDivider"
        app:drawableStartCompat="@drawable/ic_information"
        app:drawableEndCompat="@drawable/ic_right_arrow"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupAllElement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="lineDivider,btnMoviePlay,tvMovieDownload,tvMovieReleaseDate,tvMovieOverview,tvMovieAdvance,circularProgressBar,tvProgress,usersScore"
        />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>